fixed icon align and size

--- a/css/style.css
+++ b/css/style.css
@@ -319,7 +319,7 @@ section {
 
     display: inline-flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 .icon.icon-small {
@@ -330,6 +330,7 @@ section {
 .icon.icon-big {
     width: 38px;
     height: 38px;
+    font-size: 22px;
 }
 
 .icon.icon-rounded {
